# irupkg

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  audit_app_and_version.zsh  brew_cron.json  build.zsh  config.json  docker-compose.yml  entrypoint.sh  pyproject.toml  scheduler.sh  setup.zsh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: example-irupkg-iructl-brew.yml  irupkg-brew-scheduler.yml  kpkg-brew-scheduler.yml
src/irupkg/: __init__.py  _compat.py  irupkg.py
src/irupkg/helpers/: configs.py  utils.py
src/irupkg/scripts/: audit_app_and_version.zsh
src/kpkg/: __init__.py  kpkg.py
src/kpkg/helpers/: configs.py  utils.py
src/kpkg/scripts/: setup.zsh
tests/: test_setup.bats
tests/python/: conftest.py
tests/python/unit/: test_configs.py  test_irupkg.py  test_kpkg.py  test_utils.py
