[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "irupkg"
dynamic = ["version"]
description = "Iru Packages: standalone tool for programmatic management of Iru Custom Apps"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32",
    "packaging>=20.0",
    "platformdirs>=2.0",
    "libarchive-c>=5.0; sys_platform == 'linux'",
]

[project.scripts]
irupkg = "irupkg.irupkg:main"
kpkg = "irupkg._compat:_kpkg_alias"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.14",
]

[tool.setuptools]
packages = ["irupkg", "irupkg.helpers", "irupkg.scripts"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"irupkg.scripts" = ["*.zsh"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
